# 2d-gaussian-splatting

./: .clangd  .gitattributes  .gitignore  cameras.json  convert_model.py  eval_metrics_rotblender.py  metrics.py  pyproject.toml  render.py  render.sh  rerun_brdf_only.sh  run.sh  run_2dgs.sh  run_brdf_only.sh  run_exp.sh  run_linear.sh  run_nero.sh  run_pbr.sh  run_pbr_brdf_only.sh  run_pbr_linear.sh  run_point_laplacian.sh  run_srgb.sh  run_srgb_vh.sh  summary.py  test.ipynb  train.py  train_refine.py  visual_hull.py
arguments/: __init__.py
bvh/: CMakeLists.txt  __init__.py
bvh/bvh_tracing.egg-info/: SOURCES.txt
bvh/include/: bvh.h  trace.cuh  utility.cuh
bvh/src/: bindings.cpp  bvh.cu  construct.cu  trace.cu
envmaps/: .gitignore  fit_envmap_with_gaussians.py  fit_envmap_with_shs.py
gaussian_renderer/: __init__.py  gaushader.py  neilf.py  twodgs.py
render/: .gitignore  blender_rotator.py  camera_pose.ipynb  plot_render.ipynb  pose_utils.py  process_render.ipynb  run.sh
render/3dmodel/: pigeon.glb
scene/: __init__.py  cameras.py  dataset_readers.py  direct_light_sh.py  gamma_trans.py  gaussian_model.py  gs_light.py
scene/NVDIFFREC/: light.py
scripts/: dtu_eval.py  run.sh
scripts/NeRO/: eval_synthetic_shape.py
scripts/NeRO/dataset/: database.py
utils/: camera_utils.py  dataset_utils.py  gaussian_utils.py  general_utils.py  graphics_utils.py  image_utils.py  lighting_utils.py  loss_utils.py  mesh_utils.py  plot_utils.py  point_utils.py  render_utils.py  sh_utils.py
